--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "7zip-min": "^1.2.0",
     "chalk": "^4.1.0",
+    "cheerio": "^1.0.0-rc.5",
     "decompress": "^4.2.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
