--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "7zip-min": "^1.2.0",
+    "capture-website": "^2.0.2",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.5",
+    "connect-flash": "^0.1.1",
     "decompress": "^4.2.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "log-update": "^4.0.0",
+    "method-override": "^3.0.0",
     "serve-handler": "^6.1.3",
     "terminal-link": "^2.1.1",
     "unrar": "^0.2.0"
